@@ -120,6 +120,7 @@ void play_replay(display& disp, game_state& state, const config& game_config,
 
 LEVEL_RESULT play_game(display& disp, game_state& state, const config& game_config,
 		const game_data& units_data, CVideo& video,
+		upload_log &log,
 		io_type_t io_type)
 {
 	std::string type = state.campaign_type;
@@ -200,7 +201,7 @@ LEVEL_RESULT play_game(display& disp, game_state& state, const config& game_conf
 			if (state.label.empty())
 				state.label = (*scenario)["name"];
 
-			LEVEL_RESULT res = play_level(units_data,game_config,scenario,video,state,story);
+			LEVEL_RESULT res = play_level(units_data,game_config,scenario,video,state,story,log);
 			//LEVEL_RESULT res = play_scenario(units_data,game_config,scenario,video,state,story);
 
 			state.snapshot = config();
