@@ -178,6 +178,10 @@ namespace preferences {
 	bool flip_time();
 	void set_flip_time(bool value);
 
+	bool upload_log();
+	void set_upload_log(bool value);
+	const std::string &upload_id();
+
 	// Multiplayer functions
 	bool chat_timestamp();
 	void set_chat_timestamp(bool value);
