@@ -20,6 +20,9 @@ SVN trunk (1.1+svn):
      use any attack of the same range. Official name for current ranges are
      "melee" and "ranged"
    * starting_villages macro updated for added village types
+ * Miscelleneous
+   * Added anonymous data logging for single player campaigns, see
+   stats.wesnoth.org
 
 Version 1.1:
  * campaign server
